fixing bug with settings title overlap css

--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -34,6 +34,7 @@
 }
 
 .settings-title {
+  margin-top: 50px;
   font-size: 50px;
   font-weight: 500;
   text-shadow: 0 0 5px black;
